Bug 1010119 - Roll back part of bug 978248 as it causes a regression and is not needed any more. r=botond