gfx/layers/apz/util/APZCCallbackHelper.cpp
@@ -180,20 +180,20 @@ APZCCallbackHelper::UpdateRootFrame(nsIDOMWindowUtils* aUtils,
     bool scrollUpdated = false;
     CSSPoint actualScrollOffset = ScrollFrameTo(sf, aMetrics.GetScrollOffset(), scrollUpdated);
 
-    if (!scrollUpdated) {
-      // For whatever reason we couldn't update the scroll offset on the scroll frame,
-      // which means the data APZ used for its displayport calculation is stale. Fall
-      // back to a sane default behaviour. Note that we don't tile-align the recentered
-      // displayport because tile-alignment depends on the scroll position, and the
-      // scroll position here is out of our control. See bug 966507 comment 21 for a
-      // more detailed explanation.
-      RecenterDisplayPort(aMetrics);
+    if (scrollUpdated) {
+        // Correct the display port due to the difference between mScrollOffset and the
+        // actual scroll offset, possibly align it to tile boundaries (if tiled layers are
+        // enabled), and clamp it to the scrollable rect.
+        MaybeAlignAndClampDisplayPort(aMetrics, actualScrollOffset);
+    } else {
+        // For whatever reason we couldn't update the scroll offset on the scroll frame,
+        // which means the data APZ used for its displayport calculation is stale. Fall
+        // back to a sane default behaviour. Note that we don't tile-align the recentered
+        // displayport because tile-alignment depends on the scroll position, and the
+        // scroll position here is out of our control. See bug 966507 comment 21 for a
+        // more detailed explanation.
+        RecenterDisplayPort(aMetrics);
     }
-
-    // Correct the display port due to the difference between mScrollOffset and the
-    // actual scroll offset, possibly align it to tile boundaries (if tiled layers are
-    // enabled), and clamp it to the scrollable rect.
-    MaybeAlignAndClampDisplayPort(aMetrics, actualScrollOffset);
 
     aMetrics.SetScrollOffset(actualScrollOffset);
 
@@ -272,10 +272,11 @@ APZCCallbackHelper::UpdateSubFrame(nsIContent* aContent,
 
     nsCOMPtr<nsIDOMElement> element = do_QueryInterface(aContent);
     if (element) {
-        if (!scrollUpdated) {
+        if (scrollUpdated) {
+            MaybeAlignAndClampDisplayPort(aMetrics, actualScrollOffset);
+        } else {
             RecenterDisplayPort(aMetrics);
         }
-        MaybeAlignAndClampDisplayPort(aMetrics, actualScrollOffset);
         if (!aMetrics.GetUseDisplayPortMargins()) {
             utils->SetDisplayPortForElement(aMetrics.mDisplayPort.x,
                                             aMetrics.mDisplayPort.y,
